set up sbt in ci gha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,5 +19,7 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
           cache: 'sbt'
+      - name: Setup sbt launcher
+        uses: sbt/setup-sbt@v1
       - name: ✅ Run test
         run: sbt test
